--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <p class="description">DeepSearch AI의 핵심 자산인 '기업/금융 특화 데이터'를 기반으로, 어떤 사업 및 세일즈 전략이 최선일지 탐색합니다. 본 문서는 두 가지 핵심 전략을 심층적으로 비교 분석하고, Gemini API를 활용한 AI 기능과 함께 최적의 실행 계획 및 가격 정책을 제안합니다.</p>
             </li>
             <li>
-                <a href="image_gallery.html">뉴스 기반 기업용 AI 서비스 전략 분석</a>
+                <a href="news.html">뉴스 기반 기업용 AI 서비스 전략 분석</a>
                 <p class="description">본 대시보드는 정보 과부하 시대의 직장인을 위한 뉴스 기반 AI 서비스의 사업 전략을 분석합니다. 시장 기회, 사용자 확보, 사내 확산, 시장 진출(GTM) 전략, 수익 모델을 심층적으로 탐색하고 최종 실행 계획을 제안합니다.</p>
             </li>
             <!-- <li>
