--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
                 <a href="news.html">뉴스 기반 기업용 AI 서비스 전략 분석</a>
                 <p class="description">본 대시보드는 정보 과부하 시대의 직장인을 위한 뉴스 기반 AI 서비스의 사업 전략을 분석합니다. 시장 기회, 사용자 확보, 사내 확산, 시장 진출(GTM) 전략, 수익 모델을 심층적으로 탐색하고 최종 실행 계획을 제안합니다.</p>
             </li>
-            <!-- <li>
-                <a href="todo_list_app.html">투두리스트 앱 (To-Do List App)</a>
-                <p class="description">로컬 스토리지를 사용하는 간단한 할 일 목록 앱입니다.</p>
-            </li>
             <li>
+                <a href="teaser1.html">AI 기반 광고 기술 & 디지털 마케팅 그룹 인수 기회 제안</a>
+                <p class="description">본 M&A는 AI 기반 광고 기술 플랫폼(DMP/DSP)과 고성장 디지털 마케팅 에이전시를 통합하여 인수하는 특별한 기회입니다. 이를 통해 인수 기업은 즉각적인 시장 점유율 확대와 미래 성장 동력을 확보할 수 있습니다.</p>
+            </li>
+            <!-- <li>
                 <a href="data_visualization_sample.html">데이터 시각화 샘플 (Data Visualization Sample)</a>
                 <p class="description">샘플 데이터를 활용한 기본 차트 시각화 데모입니다.</p>
             </li> -->
