--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                     <p class="description">본 M&A는 AI 기반 광고 기술 플랫폼(DMP/DSP)과 고성장 디지털 마케팅 에이전시를 통합하여 인수하는 특별한 기회입니다. 이를 통해 인수 기업은 즉각적인 시장 점유율 확대와 미래 성장 동력을 확보할 수 있습니다.</p>
                 </li>
                 <li>
-                    <a href="workplatform.html">AI 워크 플랫폼 (목업)</a>
+                    <a href="workplatform.html">DeepSearch AI</a>
                     <p class="description">B2B 기업 고객을 위한 보안 강화형 AI 기반 협업 및 리서치 플랫폼</p>
                 </li>
             </ul>
