--- a/workplatform.html
+++ b/workplatform.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI 워크 플랫폼 (목업)</title>
+    <title>DeepSearch AI</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -106,7 +106,7 @@
     <aside class="flex flex-col w-72 bg-gray-100 border-r border-gray-200 p-4 space-y-6 shrink-0">
         <div class="flex items-center space-x-3 px-2">
             <i class="fas fa-brain fa-2x text-blue-600"></i>
-            <h1 class="text-2xl font-bold text-gray-800">AI 워크 플랫폼</h1>
+            <h1 class="text-2xl font-bold text-gray-800">DeepSearch AI</h1>
         </div>
         <div class="p-3 bg-white rounded-lg shadow">
             <div class="flex items-center space-x-3">
