--- a/workplatform.html
+++ b/workplatform.html
@@ -157,9 +157,11 @@
             </nav>
         </div>
         <div>
-            <h2 class="text-sm font-semibold text-gray-600 uppercase tracking-wide mb-2 mt-3">인사이트</h2>
+            <h2 class="text-sm font-semibold text-gray-600 uppercase tracking-wide mb-2 mt-3">데이터베이스</h2>
             <div class="space-y-1">
                 <a href="#news-feed" onclick="showNewsFeedView(event)" class="flex items-center space-x-2 px-3 py-2 rounded-md text-sm text-gray-700 sidebar-item"><i class="fas fa-globe w-5 h-5 text-gray-500"></i><span>뉴스 피드</span></a>
+                <a href="#" class="flex items-center space-x-2 px-3 py-2 rounded-md text-sm text-gray-700 sidebar-item"><i class="fas fa-folder-open w-5 h-5 text-gray-500"></i><span>공시</span></a>
+                <a href="#" class="flex items-center space-x-2 px-3 py-2 rounded-md text-sm text-gray-700 sidebar-item"><i class="fas fa-folder-open w-5 h-5 text-gray-500"></i><span>특허</span></a>
                 <a href="#" class="flex items-center space-x-2 px-3 py-2 rounded-md text-sm text-gray-700 sidebar-item"><i class="fas fa-folder-open w-5 h-5 text-gray-500"></i><span>리서치</span></a>
                 <a href="#" class="flex items-center space-x-2 px-3 py-2 rounded-md text-sm text-gray-700 sidebar-item"><i class="fas fa-database w-5 h-5 text-indigo-500"></i><span>기업 정보</span><i class="fas fa-lock text-xs text-gray-400 ml-auto" title="유료 구독 필요"></i></a>
                 <a href="#" class="flex items-center space-x-2 px-3 py-2 rounded-md text-sm text-gray-700 sidebar-item"><i class="fas fa-dollar-sign w-5 h-5 text-teal-500"></i><span>투자 정보</span><i class="fas fa-lock text-xs text-gray-400 ml-auto" title="유료 구독 필요"></i></a>
