--- a/index.html
+++ b/index.html
@@ -198,6 +198,10 @@
                     <a href="workplatform.html">DeepSearch AI</a>
                     <p class="description">B2B 기업 고객을 위한 보안 강화형 AI 기반 협업 및 리서치 플랫폼</p>
                 </li>
+                <li>
+                    <a href="mg.html">MG새마을금고 제안</a>
+                    <p class="description">Next ETA 프로그램: 새마을금고 투자 제안</p>
+                </li>
             </ul>
         </div>
 
