--- a/mg.html
+++ b/mg.html
@@ -256,7 +256,7 @@
         <div class="container mx-auto text-center">
             <p class="font-bold text-xl mb-2">Next Start-Up ETA Accelerating Program</p>
             <p>대한민국 지역 경제의 지속 가능한 미래를 위해 함께하겠습니다.</p>
-            <p class="text-sm text-gray-400 mt-4">&copy; 2025 (주)스토리앤데이터. All Rights Reserved.</p>
+            <p class="text-sm text-gray-400 mt-4">&copy; 2025 (주)딥서치. All Rights Reserved.</p>
         </div>
     </footer>
     
