--- a/flow.html
+++ b/flow.html
@@ -11,11 +11,20 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <style>
         body { font-family: 'Noto Sans KR', sans-serif; background-color: #F9FAFB; }
-        .flow-card { background-color: white; border-radius: 0.75rem; box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1); padding: 2rem; transition: transform 0.3s ease, box-shadow 0.3s ease; }
+        .flow-card { 
+            background-color: white; 
+            border-radius: 0.75rem; 
+            box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1); 
+            padding: 2rem; 
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+        }
         .flow-card:hover { transform: translateY(-5px); box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -2px rgb(0 0 0 / 0.1); }
         .step-number { background-color: #3B82F6; color: white; border-radius: 9999px; width: 3rem; height: 3rem; display: flex; align-items: center; justify-content: center; font-size: 1.5rem; font-weight: 700; flex-shrink: 0; }
-        .step-title { font-size: 1.5rem; font-weight: 700; color: #1F2937; margin-left: 1rem; }
-        .timeline-connector { width: 2px; background-color: #D1D5DB; margin-left: 1.45rem; height: 4rem; }
+        .step-title { font-size: 1.25rem; line-height: 1.75rem; font-weight: 700; color: #1F2937; margin-left: 1rem; }
+        .item-list { flex-grow: 1; }
         .item-list li { display: flex; align-items: start; margin-top: 1rem; }
         .item-list .icon { color: #3B82F6; margin-right: 0.75rem; margin-top: 0.25rem; width: 1.25rem; text-align: center; }
     </style>
@@ -32,121 +41,104 @@
     </header>
 
     <main class="container mx-auto px-4 sm:px-6 lg:px-8 py-12">
-        <div class="max-w-3xl mx-auto">
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
             
             <!-- Step 1: Client Preparation & Submission -->
-            <div class="flex items-start">
-                <div class="flex flex-col items-center">
-                    <div class="step-number">1</div>
-                    <div class="timeline-connector"></div>
+            <div class="flow-card">
+                <div class="flex items-center mb-4">
+                     <div class="step-number">1</div>
+                     <h2 class="step-title">매각 준비 및 자료 제출<br>(고객 준비)</h2>
                 </div>
-                <div class="w-full ml-4">
-                    <div class="flow-card -mt-2">
-                        <div class="flex items-center">
-                             <h2 class="step-title">매각 준비 및 자료 제출 (고객 준비)</h2>
+                <p class="text-gray-600">성공적인 매각 상담을 위해, 고객님께서 직접 회사의 핵심 정보를 정리하고 관련 자료를 제출하는 단계입니다. <strong class="text-blue-600">본 단계가 완료되어야 2단계 심층 상담으로 진행됩니다.</strong></p>
+                <ul class="mt-4 item-list">
+                    <li>
+                        <i class="fas fa-pencil-alt icon"></i>
+                        <div>
+                            <h3 class="font-semibold text-gray-800">회사 주요 내용 정리</h3>
+                            <p class="text-gray-600 text-sm">사업 모델, 경쟁력, 성장 포인트 등 회사의 핵심 소개 자료를 직접 정리합니다.</p>
                         </div>
-                        <p class="mt-3 text-gray-600">성공적인 매각 상담을 위해, 고객님께서 직접 회사의 핵심 정보를 정리하고 관련 자료를 제출하는 단계입니다. <strong class="text-blue-600">본 단계가 완료되어야 2단계 심층 상담으로 진행됩니다.</strong></p>
-                        <ul class="mt-4 item-list">
-                            <li>
-                                <i class="fas fa-pencil-alt icon"></i>
-                                <div>
-                                    <h3 class="font-semibold text-gray-800">회사 주요 내용 및 포인트 정리</h3>
-                                    <p class="text-gray-600 text-sm">고객님께서 직접 사업 모델, 경쟁력, 성장 포인트 등 회사의 핵심 소개 자료를 정리합니다.</p>
-                                </div>
-                            </li>
-                            <li>
-                                <i class="fas fa-cloud-upload-alt icon"></i>
-                                <div>
-                                    <h3 class="font-semibold text-gray-800">관련 자료 업로드</h3>
-                                    <p class="text-gray-600 text-sm">정확한 가치 평가를 위한 재무제표, 사업 계획서 등 필수 자료를 안내에 따라 업로드합니다.</p>
-                                </div>
-                            </li>
-                             <li>
-                                <i class="fas fa-hourglass-start icon"></i>
-                                <div>
-                                    <h3 class="font-semibold text-gray-800">자료 검토 및 상담 조율</h3>
-                                    <p class="text-gray-600 text-sm">제출된 자료를 담당 매니저가 검토한 후, 심층 상담 일정을 확정하기 위해 연락드립니다.</p>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+                    </li>
+                    <li>
+                        <i class="fas fa-cloud-upload-alt icon"></i>
+                        <div>
+                            <h3 class="font-semibold text-gray-800">관련 자료 업로드</h3>
+                            <p class="text-gray-600 text-sm">재무제표, 사업 계획서 등 필수 자료를 안내에 따라 업로드합니다.</p>
+                        </div>
+                    </li>
+                     <li>
+                        <i class="fas fa-hourglass-start icon"></i>
+                        <div>
+                            <h3 class="font-semibold text-gray-800">자료 검토 및 상담 조율</h3>
+                            <p class="text-gray-600 text-sm">제출된 자료를 담당 매니저가 검토한 후, 심층 상담 일정을 확정하기 위해 연락드립니다.</p>
+                        </div>
+                    </li>
+                </ul>
             </div>
 
             <!-- Step 2: In-depth Consultation -->
-            <div class="flex items-start">
-                 <div class="flex flex-col items-center">
+            <div class="flow-card">
+                <div class="flex items-center mb-4">
                     <div class="step-number">2</div>
-                    <div class="timeline-connector"></div>
+                    <h2 class="step-title">심층 상담 진행<br>(최대 1시간)</h2>
                 </div>
-                <div class="w-full ml-4">
-                    <div class="flow-card -mt-2">
-                         <div class="flex items-center">
-                             <h2 class="step-title">심층 상담 진행 (최대 1시간)</h2>
+                <p class="mt-3 text-gray-600">확보된 상담 시간 동안, 매물의 가치를 극대화하고 성공적인 거래를 위한 핵심 목표들을 달성합니다.</p>
+                 <ul class="mt-4 item-list">
+                    <li>
+                        <i class="fas fa-comments icon"></i>
+                        <div>
+                            <h3 class="font-semibold text-gray-800">상세 내용 인터뷰</h3>
+                            <p class="text-gray-600 text-sm">화상 혹은 전화 통화를 통해 회사의 역사, 강점, 사업 모델, 성장 전략 등 정성적 정보를 심도 있게 파악합니다.</p>
                         </div>
-                        <p class="mt-3 text-gray-600">확보된 상담 시간 동안, 매물의 가치를 극대화하고 성공적인 거래를 위한 핵심 목표들을 달성합니다.</p>
-                         <ul class="mt-4 item-list">
-                            <li>
-                                <i class="fas fa-comments icon"></i>
-                                <div>
-                                    <h3 class="font-semibold text-gray-800">상세 내용 인터뷰 (최대 30분)</h3>
-                                    <p class="text-gray-600 text-sm">화상 혹은 전화 통화를 통해 회사의 역사, 강점, 사업 모델, 성장 전략 등 정성적 정보를 심도 있게 파악합니다.</p>
-                                </div>
-                            </li>
-                            <li>
-                                <i class="fas fa-calculator icon"></i>
-                                <div>
-                                    <h3 class="font-semibold text-gray-800">기업가치 잠정 평가</h3>
-                                    <p class="text-gray-600 text-sm">수집된 자료와 인터뷰 내용을 바탕으로 수익, 자산, 기술 가치를 종합하여 기업의 잠정 가치를 평가하고 고객과 공유합니다.</p>
-                                </div>
-                            </li>
-                            <li>
-                                <i class="fas fa-lightbulb icon"></i>
-                                <div>
-                                    <h3 class="font-semibold text-gray-800">투자설명서(Teaser) 고도화</h3>
-                                    <p class="text-gray-600 text-sm">인터뷰 내용을 반영하여 익명의 투자설명서를 완성합니다. 회사의 핵심 매력 포인트가 잘 드러나도록 내용을 보강합니다.</p>
-                                </div>
-                            </li>
-                            <li>
-                                <i class="fas fa-bullseye icon"></i>
-                                <div>
-                                    <h3 class="font-semibold text-gray-800">타겟 인수자 리스트업</h3>
-                                    <p class="text-gray-600 text-sm">회사의 특성과 시너지 효과를 고려하여 가장 적합한 잠재 인수 후보군 리스트를 작성하고 전략을 논의합니다.</p>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+                    </li>
+                    <li>
+                        <i class="fas fa-calculator icon"></i>
+                        <div>
+                            <h3 class="font-semibold text-gray-800">기업가치 잠정 평가</h3>
+                            <p class="text-gray-600 text-sm">수집된 자료와 인터뷰 내용을 바탕으로 기업의 잠정 가치를 평가하고 고객과 공유합니다.</p>
+                        </div>
+                    </li>
+                    <li>
+                        <i class="fas fa-lightbulb icon"></i>
+                        <div>
+                            <h3 class="font-semibold text-gray-800">투자설명서(Teaser) 고도화</h3>
+                            <p class="text-gray-600 text-sm">인터뷰 내용을 반영하여 익명의 투자설명서를 완성하고, 회사의 핵심 매력 포인트를 보강합니다.</p>
+                        </div>
+                    </li>
+                    <li>
+                        <i class="fas fa-bullseye icon"></i>
+                        <div>
+                            <h3 class="font-semibold text-gray-800">타겟 인수자 리스트업</h3>
+                            <p class="text-gray-600 text-sm">회사의 특성을 고려하여 가장 적합한 잠재 인수 후보군 리스트를 작성하고 전략을 논의합니다.</p>
+                        </div>
+                    </li>
+                </ul>
             </div>
 
             <!-- Step 3: Listing -->
-            <div class="flex items-start">
-                 <div class="step-number">3</div>
-                 <div class="w-full ml-4">
-                    <div class="flow-card -mt-2">
-                        <div class="flex items-center">
-                             <h2 class="step-title">'리스팅' 등록 및 매각 절차 개시</h2>
-                        </div>
-                        <p class="mt-3 text-gray-600">심층 상담을 성공적으로 완료한 매물에 한하여, 당사의 플랫폼 '리스팅'에 정식으로 게재하고 잠재 인수자들에게 제안을 시작합니다.</p>
-                         <ul class="mt-4 item-list">
-                            <li>
-                                <i class="fas fa-check-circle icon text-green-500"></i>
-                                <div>
-                                    <h3 class="font-semibold text-gray-800">검증된 매물만 등록</h3>
-                                    <p class="text-gray-600 text-sm">모든 상담 절차를 통과하고 가치 평가가 완료된 검증된 매물만이 '리스팅'에 올라갑니다. 이는 플랫폼의 신뢰도를 유지하는 핵심 원칙입니다.</p>
-                                </div>
-                            </li>
-                             <li>
-                                <i class="fas fa-paper-plane icon"></i>
-                                <div>
-                                    <h3 class="font-semibold text-gray-800">매각 프로세스 진행</h3>
-                                    <p class="text-gray-600 text-sm">'리스팅' 등록 후, 리스트업된 타겟 인수자들에게 투자설명서를 발송하고 본격적인 매각 절차를 개시합니다.</p>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
+            <div class="flow-card">
+                <div class="flex items-center mb-4">
+                    <div class="step-number">3</div>
+                    <h2 class="step-title">'리스팅' 등록 및<br>매각 절차 개시</h2>
                 </div>
+                <p class="mt-3 text-gray-600">심층 상담을 성공적으로 완료한 매물에 한하여, 당사의 플랫폼 '리스팅'에 정식으로 게재하고 잠재 인수자들에게 제안을 시작합니다.</p>
+                 <ul class="mt-4 item-list">
+                    <li>
+                        <i class="fas fa-check-circle icon text-green-500"></i>
+                        <div>
+                            <h3 class="font-semibold text-gray-800">검증된 매물만 등록</h3>
+                            <p class="text-gray-600 text-sm">모든 상담 절차를 통과하고 가치 평가가 완료된 검증된 매물만이 '리스팅'에 올라갑니다.</p>
+                        </div>
+                    </li>
+                     <li>
+                        <i class="fas fa-paper-plane icon"></i>
+                        <div>
+                            <h3 class="font-semibold text-gray-800">매각 프로세스 진행</h3>
+                            <p class="text-gray-600 text-sm">'리스팅' 등록 후, 타겟 인수자들에게 투자설명서를 발송하고 본격적인 매각 절차를 개시합니다.</p>
+                        </div>
+                    </li>
+                </ul>
             </div>
+
         </div>
     </main>
 
