--- a/flow.html
+++ b/flow.html
@@ -15,15 +15,15 @@
             background-color: white; 
             border-radius: 0.75rem; 
             box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1); 
-            padding: 2rem; 
+            padding: 1.5rem; 
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             display: flex;
             flex-direction: column;
             height: 100%;
         }
         .flow-card:hover { transform: translateY(-5px); box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -2px rgb(0 0 0 / 0.1); }
-        .step-number { background-color: #3B82F6; color: white; border-radius: 9999px; width: 3rem; height: 3rem; display: flex; align-items: center; justify-content: center; font-size: 1.5rem; font-weight: 700; flex-shrink: 0; }
-        .step-title { font-size: 1.25rem; line-height: 1.75rem; font-weight: 700; color: #1F2937; margin-left: 1rem; }
+        .step-number { background-color: #3B82F6; color: white; border-radius: 9999px; width: 2.5rem; height: 2.5rem; display: flex; align-items: center; justify-content: center; font-size: 1.25rem; font-weight: 700; flex-shrink: 0; }
+        .step-title { font-size: 1.15rem; line-height: 1.5rem; font-weight: 700; color: #1F2937; margin-left: 0.75rem; }
         .item-list { flex-grow: 1; }
         .item-list li { display: flex; align-items: start; margin-top: 1rem; }
         .item-list .icon { color: #3B82F6; margin-right: 0.75rem; margin-top: 0.25rem; width: 1.25rem; text-align: center; }
@@ -41,7 +41,7 @@
     </header>
 
     <main class="container mx-auto px-4 sm:px-6 lg:px-8 py-12">
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
             
             <!-- Step 1: Client Preparation & Submission -->
             <div class="flow-card">
@@ -49,7 +49,7 @@
                      <div class="step-number">1</div>
                      <h2 class="step-title">매각 준비 및 자료 제출<br>(고객 준비)</h2>
                 </div>
-                <p class="text-gray-600">성공적인 매각 상담을 위해, 고객님께서 직접 회사의 핵심 정보를 정리하고 관련 자료를 제출하는 단계입니다. <strong class="text-blue-600">본 단계가 완료되어야 2단계 심층 상담으로 진행됩니다.</strong></p>
+                <p class="text-sm text-gray-600">성공적인 매각 상담을 위해, 고객님께서 직접 회사의 핵심 정보를 정리하고 관련 자료를 제출하는 단계입니다. <strong class="text-blue-600">본 단계가 완료되어야 2단계로 진행됩니다.</strong></p>
                 <ul class="mt-4 item-list">
                     <li>
                         <i class="fas fa-pencil-alt icon"></i>
@@ -69,7 +69,7 @@
                         <i class="fas fa-hourglass-start icon"></i>
                         <div>
                             <h3 class="font-semibold text-gray-800">자료 검토 및 상담 조율</h3>
-                            <p class="text-gray-600 text-sm">제출된 자료를 담당 매니저가 검토한 후, 심층 상담 일정을 확정하기 위해 연락드립니다.</p>
+                            <p class="text-gray-600 text-sm">제출된 자료를 담당 매니저가 검토 후, 심층 상담 일정을 확정하기 위해 연락드립니다.</p>
                         </div>
                     </li>
                 </ul>
@@ -79,61 +79,86 @@
             <div class="flow-card">
                 <div class="flex items-center mb-4">
                     <div class="step-number">2</div>
-                    <h2 class="step-title">심층 상담 진행<br>(최대 1시간)</h2>
+                    <h2 class="step-title">심층 상담 및 가치평가<br>(매니저 진행)</h2>
                 </div>
-                <p class="mt-3 text-gray-600">확보된 상담 시간 동안, 매물의 가치를 극대화하고 성공적인 거래를 위한 핵심 목표들을 달성합니다.</p>
+                <p class="text-sm text-gray-600">확보된 상담 시간(최대 1시간) 동안, 매물의 가치를 극대화하고 성공적인 거래를 위한 핵심 목표들을 달성합니다.</p>
                  <ul class="mt-4 item-list">
                     <li>
                         <i class="fas fa-comments icon"></i>
                         <div>
                             <h3 class="font-semibold text-gray-800">상세 내용 인터뷰</h3>
-                            <p class="text-gray-600 text-sm">화상 혹은 전화 통화를 통해 회사의 역사, 강점, 사업 모델, 성장 전략 등 정성적 정보를 심도 있게 파악합니다.</p>
+                            <p class="text-gray-600 text-sm">화상/전화 통화로 사업 모델, 강점, 성장 전략 등 정성적 정보를 심도 있게 파악합니다.</p>
                         </div>
                     </li>
                     <li>
                         <i class="fas fa-calculator icon"></i>
                         <div>
                             <h3 class="font-semibold text-gray-800">기업가치 잠정 평가</h3>
-                            <p class="text-gray-600 text-sm">수집된 자료와 인터뷰 내용을 바탕으로 기업의 잠정 가치를 평가하고 고객과 공유합니다.</p>
+                            <p class="text-gray-600 text-sm">수집된 자료와 인터뷰 내용을 바탕으로 기업의 잠정 가치를 객관적으로 평가합니다.</p>
                         </div>
                     </li>
                     <li>
                         <i class="fas fa-lightbulb icon"></i>
                         <div>
-                            <h3 class="font-semibold text-gray-800">투자설명서(Teaser) 고도화</h3>
-                            <p class="text-gray-600 text-sm">인터뷰 내용을 반영하여 익명의 투자설명서를 완성하고, 회사의 핵심 매력 포인트를 보강합니다.</p>
-                        </div>
-                    </li>
-                    <li>
-                        <i class="fas fa-bullseye icon"></i>
-                        <div>
-                            <h3 class="font-semibold text-gray-800">타겟 인수자 리스트업</h3>
-                            <p class="text-gray-600 text-sm">회사의 특성을 고려하여 가장 적합한 잠재 인수 후보군 리스트를 작성하고 전략을 논의합니다.</p>
+                            <h3 class="font-semibold text-gray-800">투자설명서(Teaser) 완성</h3>
+                            <p class="text-gray-600 text-sm">제출 자료와 인터뷰 내용을 종합하여 회사의 핵심 매력이 드러나는 익명의 투자설명서를 완성합니다.</p>
                         </div>
                     </li>
                 </ul>
             </div>
 
-            <!-- Step 3: Listing -->
+            <!-- Step 3: Agreement & Strategy Confirmation -->
             <div class="flow-card">
                 <div class="flex items-center mb-4">
                     <div class="step-number">3</div>
-                    <h2 class="step-title">'리스팅' 등록 및<br>매각 절차 개시</h2>
+                    <h2 class="step-title">결과 공유 및 전략 확정<br>(고객 동의)</h2>
                 </div>
-                <p class="mt-3 text-gray-600">심층 상담을 성공적으로 완료한 매물에 한하여, 당사의 플랫폼 '리스팅'에 정식으로 게재하고 잠재 인수자들에게 제안을 시작합니다.</p>
+                <p class="text-sm text-gray-600">평가된 가치와 매각 전략에 대해 고객의 최종 동의를 얻고 공식적인 절차를 준비하는 핵심 단계입니다.</p>
+                 <ul class="mt-4 item-list">
+                    <li>
+                        <i class="fas fa-chart-pie icon"></i>
+                        <div>
+                            <h3 class="font-semibold text-gray-800">평가 결과 보고</h3>
+                            <p class="text-gray-600 text-sm">산출된 기업가치 평가 결과와 근거를 고객에게 상세히 설명하고, 현실적인 가격 기대치를 조율합니다.</p>
+                        </div>
+                    </li>
+                     <li>
+                        <i class="fas fa-bullseye icon"></i>
+                        <div>
+                            <h3 class="font-semibold text-gray-800">매각 전략 및 타겟 확정</h3>
+                            <p class="text-gray-600 text-sm">최적의 잠재 인수자 리스트와 단계별 매각 전략에 대해 논의하고 최종적으로 확정합니다.</p>
+                        </div>
+                    </li>
+                    <li>
+                        <i class="fas fa-file-signature icon"></i>
+                        <div>
+                            <h3 class="font-semibold text-gray-800">자문 계약 체결</h3>
+                            <p class="text-gray-600 text-sm">상호 합의된 내용을 바탕으로 공식적인 매각 자문 계약(비밀유지 포함)을 체결합니다.</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+
+            <!-- Step 4: Listing & Deal Process -->
+            <div class="flow-card">
+                <div class="flex items-center mb-4">
+                    <div class="step-number">4</div>
+                    <h2 class="step-title">'리스팅' 등록 및 매각 개시<br>(매각 진행)</h2>
+                </div>
+                <p class="text-sm text-gray-600">모든 준비를 마치고, 당사 플랫폼 '리스팅'에 정식으로 게재하여 본격적인 매각 절차를 시작합니다.</p>
                  <ul class="mt-4 item-list">
                     <li>
                         <i class="fas fa-check-circle icon text-green-500"></i>
                         <div>
-                            <h3 class="font-semibold text-gray-800">검증된 매물만 등록</h3>
-                            <p class="text-gray-600 text-sm">모든 상담 절차를 통과하고 가치 평가가 완료된 검증된 매물만이 '리스팅'에 올라갑니다.</p>
+                            <h3 class="font-semibold text-gray-800">검증된 매물 등록</h3>
+                            <p class="text-gray-600 text-sm">모든 절차를 통과한 검증된 매물만이 플랫폼에 등록되어 신뢰도를 보장합니다.</p>
                         </div>
                     </li>
                      <li>
                         <i class="fas fa-paper-plane icon"></i>
                         <div>
                             <h3 class="font-semibold text-gray-800">매각 프로세스 진행</h3>
-                            <p class="text-gray-600 text-sm">'리스팅' 등록 후, 타겟 인수자들에게 투자설명서를 발송하고 본격적인 매각 절차를 개시합니다.</p>
+                            <p class="text-gray-600 text-sm">타겟 인수자에게 투자설명서(IM) 발송, 비밀유지계약(NDA) 체결, Q&A 진행, 인수제안서(LOI) 접수 등 본격적인 매각 절차를 개시합니다.</p>
                         </div>
                     </li>
                 </ul>
