--- a/seller.html
+++ b/seller.html
@@ -175,7 +175,7 @@
                         <div class="icon"><i class="fas fa-file-signature"></i></div>
                         <div class="content">
                             <p class="font-semibold">계약 절차 안내</p>
-                            <p class="text-sm">향후 절차 진행을 위한 플랫폼 이용 계약, 비밀유지계약(NDA), 독점 계약에 대해 안내합니다.</p>
+                            <p class="text-sm">향후 절차 진행을 위한 플랫폼 이용 계약, 비밀유지계약(NDA) 에 대해 안내합니다.</p>
                         </div>
                     </div>
                 </div>
