--- a/kosme.html
+++ b/kosme.html
@@ -348,10 +348,10 @@
                     <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
                         <div class="bg-slate-50 p-6 rounded-lg">
                             <div class="flex items-center mb-3">
-                                <i class="fas fa-search-dollar text-2xl text-blue-600 mr-3"></i>
-                                <h4 class="text-lg font-bold text-slate-800">1. 정책 연계형 딜 소싱</h4>
+                                <i class="fas fa-school text-2xl text-blue-600 mr-3"></i>
+                                <h4 class="text-lg font-bold text-slate-800">1. 청년창업사관학교 ETA 트랙 신설</h4>
                             </div>
-                            <p class="text-sm text-slate-600">KOSME의 전국 네트워크를 통해 발굴된 우량 중소기업과 저희 플랫폼의 준비된 인수자를 연결하는 '정책 연계형 딜 소싱' 협력이 가능합니다.</p>
+                            <p class="text-sm text-slate-600">청창사 교육 과정에 '기업인수창업' 트랙을 신설하여, 기존 창업 모델의 대안을 제시하고 졸업생들에게 더 넓은 성공 경로를 제공할 수 있습니다.</p>
                         </div>
                         <div class="bg-slate-50 p-6 rounded-lg">
                             <div class="flex items-center mb-3">
@@ -360,23 +360,23 @@
                             </div>
                             <p class="text-sm text-slate-600">KOSME의 기존 바우처 사업을 확대 적용하여, 선발된 예비 창업가들의 M&A 초기 비용 부담을 경감시켜 줄 수 있습니다.</p>
                         </div>
-                        <div class="bg-slate-50 p-6 rounded-lg">
-                            <div class="flex items-center mb-3">
-                                <i class="fas fa-bullhorn text-2xl text-purple-600 mr-3"></i>
-                                <h4 class="text-lg font-bold text-slate-800">3. 범국가적 홍보 캠페인</h4>
-                            </div>
-                            <p class="text-sm text-slate-600">KOSME와 함께 '성공적인 기업 승계' 캠페인을 공동으로 추진한다면, ETA 모델에 대한 사회적 인식을 제고하고 더 많은 참여를 이끌어낼 수 있을 것입니다.</p>
-                        </div>
-                        <div class="bg-slate-50 p-6 rounded-lg">
-                            <div class="flex items-center mb-3">
-                                <i class="fas fa-hand-holding-usd text-2xl text-orange-600 mr-3"></i>
-                                <h4 class="text-lg font-bold text-slate-800">4. 정책자금 연계 인수금융</h4>
-                            </div>
-                            <p class="text-sm text-slate-600">ETA 졸업기업을 대상으로 KOSME의 정책자금을 '인수금융' 용도로 연계하는 방안을 마련한다면, 보다 안정적인 금융 지원이 가능해집니다.</p>
-                        </div>
-                        <div class="bg-yellow-50 p-6 rounded-lg col-span-1 md:col-span-2 lg:col-span-2 border-2 border-yellow-400">
+                        <div class="bg-yellow-50 p-6 rounded-lg col-span-1 md:col-span-2 lg:col-span-1 border-2 border-yellow-400">
                              <div class="flex items-center mb-3">
-                                <i class="fas fa-seedling text-2xl text-yellow-600 mr-3"></i>
+                                <i class="fas fa-coins text-2xl text-yellow-600 mr-3"></i>
+                                <h4 class="text-lg font-bold text-slate-800">3. 투자/융자 복합 금융 패키지</h4>
+                            </div>
+                            <p class="text-sm text-slate-600">저희 민간 펀드의 투자와 KOSME의 정책자금 융자를 결합한 '복합 금융 상품'을 공동으로 설계하여, 창업가들의 인수 자금 부담을 획기적으로 낮출 수 있습니다.</p>
+                        </div>
+                        <div class="bg-slate-50 p-6 rounded-lg">
+                            <div class="flex items-center mb-3">
+                                <i class="fas fa-search-dollar text-2xl text-purple-600 mr-3"></i>
+                                <h4 class="text-lg font-bold text-slate-800">4. 정책 연계형 딜 소싱</h4>
+                            </div>
+                            <p class="text-sm text-slate-600">KOSME의 전국 네트워크를 통해 발굴된 우량 중소기업과 저희 플랫폼의 준비된 인수자를 연결하는 '정책 연계형 딜 소싱' 협력이 가능합니다.</p>
+                        </div>
+                        <div class="bg-slate-50 p-6 rounded-lg col-span-1 md:col-span-2">
+                             <div class="flex items-center mb-3">
+                                <i class="fas fa-seedling text-2xl text-orange-600 mr-3"></i>
                                 <h4 class="text-lg font-bold text-slate-800">5. 인수금융 펀드 앵커 출자 (핵심 협력안)</h4>
                             </div>
                             <p class="text-sm text-slate-600">KOSME에서 저희가 조성하는 '중소형 M&A 인수금융 펀드'에 모태펀드 등을 통해 앵커 출자자로 참여해주신다면, 민간 자본 유치를 촉진하고 지속가능한 금융 생태계를 완성하는 데 결정적인 역할을 할 수 있습니다.</p>
