--- a/listing.html
+++ b/listing.html
@@ -132,7 +132,7 @@
 
     <main>
         <section id="hero" class="min-h-screen flex items-center bg-[#FBEAE4]">
-            <div class="container mx-auto px-4 sm:px-6 text-center">
+            <div class="container mx-auto px-4 sm:px-6 py-20 text-center">
                 <h1 class="text-4xl md:text-6xl font-black leading-tight text-[#333333]">
                     AI가 잠든<br><span class="text-[#E76033]">중소기업 M&A 시장</span>의<br>가치를 깨웁니다
                 </h1>
