--- a/global-aI-defense.html
+++ b/global-aI-defense.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DeepSearch AI 글로벌 방산 지수 제안</title>
+    <title>DeepSearch Global AI Defense Index Proposal</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -71,7 +71,7 @@
         <nav class="container mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-16">
                 <div class="flex items-center">
-                    <span class="font-bold text-xl text-gray-800">DeepSearch AI 방산 지수</span>
+                    <span class="font-bold text-xl text-gray-800">Global AI Defense Index</span>
                 </div>
                 <div class="hidden md:block">
                     <div class="ml-10 flex items-baseline space-x-4">
@@ -90,11 +90,11 @@
         <section id="hero" class="py-20 md:py-28 bg-white">
             <div class="container mx-auto px-4 sm:px-6 lg:px-8 text-center">
                 <h1 class="text-4xl md:text-5xl font-extrabold text-gray-900 leading-tight">
-                    차세대 투자의 미래: AI 글로벌 방산
+                    차세대 투자의 미래: Global AI Defense
                 </h1>
                 <p class="mt-4 max-w-2xl mx-auto text-lg md:text-xl text-gray-600">
                     지정학과 기술이 만나는 거대한 패러다임 전환,
-                    <br class="hidden sm:block">삼성자산운용이 시장을 선도할 독보적 기회입니다.
+                    <br class="hidden sm:block">시장을 선도할 독보적 기회입니다.
                 </p>
                 <div class="mt-10 max-w-4xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8">
                     <div class="stat-card">
@@ -268,11 +268,11 @@
             <div class="container mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="text-center">
                     <h2 class="text-3xl font-bold text-gray-900">경쟁 우위: 점유되지 않은 시장</h2>
-                    <p class="mt-3 max-w-2xl mx-auto text-lg text-gray-600">현재 시장에는 AI와 국방의 교차점에 순수하게 집중하는 상품이 없습니다. 이는 삼성이 '최초'이자 '최고'의 상품으로 시장을 정의할 수 있는 명백한 선점 기회입니다.</p>
+                    <p class="mt-3 max-w-2xl mx-auto text-lg text-gray-600">현재 시장에는 AI와 국방의 교차점에 순수하게 집중하는 상품이 없습니다. 이는 '최초'이자 '최고'의 상품으로 시장을 정의할 수 있는 명백한 선점 기회입니다.</p>
                 </div>
                 <div class="mt-16 grid grid-cols-1 md:grid-cols-3 gap-8">
                     <div class="stat-card border-2 border-blue-500 ring-4 ring-blue-100">
-                        <h3 class="text-xl font-bold text-blue-700">제안: Samsung DeepSearch ETF</h3>
+                        <h3 class="text-xl font-bold text-blue-700">제안: Global AI Defense ETF</h3>
                         <ul class="mt-4 space-y-3 text-gray-700">
                             <li class="flex items-center"><span class="text-green-500 mr-2">✓</span> AI & 자율성 테마 집중</li>
                             <li class="flex items-center"><span class="text-green-500 mr-2">✓</span> 글로벌 포트폴리오</li>
@@ -305,11 +305,16 @@
 
     <footer class="bg-gray-800 text-white">
         <div class="container mx-auto py-12 px-4 sm:px-6 lg:px-8 text-center">
-            <h2 class="text-3xl font-bold">시장을 선도할 준비가 되셨습니까?</h2>
-            <p class="mt-3 max-w-xl mx-auto text-gray-300">데이터는 준비되었고, 방법론은 견고하며, 시장 타이밍은 완벽합니다. 국방 투자의 미래를 정의하고 지배하기 위한 파트너십을 지금 시작하십시오.</p>
-            <button class="mt-8 bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-8 rounded-lg transition">
-                파트너십 논의 시작하기
-            </button>
+            <h2 class="text-2xl font-bold">파트너십 문의</h2>
+            <div class="mt-6 text-gray-300">
+                <p class="font-semibold text-lg">딥서치 김재윤 대표</p>
+                <p class="mt-2">
+                    <a href="tel:010-5122-3415" class="hover:text-blue-400 transition">010-5122-3415</a>
+                </p>
+                <p>
+                    <a href="mailto:jykim@deepsearch.com" class="hover:text-blue-400 transition">jykim@deepsearch.com</a>
+                </p>
+            </div>
         </div>
     </footer>
 
