--- a/eta.html
+++ b/eta.html
@@ -317,7 +317,7 @@
     <footer class="bg-slate-800 text-white">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-16 text-center">
             <h2 class="text-3xl font-bold">대한민국 경제의 새로운 미래, 함께 열어가겠습니다.</h2>
-            <p class="mt-4 max-w-3xl mx-auto text-slate-300">본 제안은 단순한 협력을 넘어, 대한민국의 산업 기반을 지키고 새로운 성장 동력을 만드는 국가적 소명입니다. 이 위대한 여정에 중소벤처기업진흥공단이 핵심적인 파트너로 함께 해주시길 제안합니다.</p>
+            <p class="mt-4 max-w-3xl mx-auto text-slate-300">본 제안은 단순한 협력을 넘어, 대한민국의 산업 기반을 지키고 새로운 성장 동력을 만드는 국가적 소명입니다. 이 위대한 여정을 함께 해주시길 제안합니다.</p>
         </div>
     </footer>
 
